--- a/src/styles/SideMenu.module.scss
+++ b/src/styles/SideMenu.module.scss
@@ -7,7 +7,8 @@
     align-items: center;
     gap: 0;
     position: fixed;
-    top: 80px;
+    overflow-x: hidden;
+    top: 0px;
     right: 0px;
     transition: transform 0.3s ease;
     transform: translateX(100%);
@@ -20,4 +21,33 @@
 .divider {
     width: 100px;
     margin: 30px 0;
+}
+
+.closeContainer {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    text-align: right;
+    justify-content: center;
+
+}
+
+.buttonContainer {
+    height: 50px;
+    width: 66.953px;
+    display: flex;
+    align-items: center;
+}
+
+.closeButton {
+    display: block;
+    font-size: 36px;
+    border:none;
+    color: #ffffff;
+    background-color: #434343;
+    cursor:pointer;
+    margin: 0 10px;
+    padding:10px;
+    text-decoration: none;
 }
